--- a/browser/js/common/directives/tools/logic-tools.html
+++ b/browser/js/common/directives/tools/logic-tools.html
@@ -29,7 +29,7 @@
               <li ng-repeat="variable in logictool.expressions track by $index" class="{{variable.type}}">
                 {{variable}}
                     <action-tools ng-if="variable.action === 'pickUp' || variable.action==='tell' || variable.action==='give' || variable.action==='ask'" actiontool="variable"></action-tools>
-              </li>
+              </gtli>
 
         </ul> -->
 
