--- a/browser/js/common/directives/tools/move-tool.html
+++ b/browser/js/common/directives/tools/move-tool.html
@@ -13,6 +13,7 @@
 		  		</p>
 
 		  		<input type="Number" ng-model="movetool.distance" class="inline form-control"/>
+		  		Square(s)
 
 	  		</div>
 
