added some more sprites, adjusted page view

--- a/browser/js/common/directives/tool-box/tool-box.html
+++ b/browser/js/common/directives/tool-box/tool-box.html
@@ -1,6 +1,6 @@
 <div class="panel">
     <div class="panel-heading">
-        My Tools
+        <h3>My Tools</h3>
     </div>
     <div class="panel-body">
         <div class="col-md-4 col-sm-12">
