--- a/browser/js/common/directives/story-list-item/story-list-item.html
+++ b/browser/js/common/directives/story-list-item/story-list-item.html
@@ -1,4 +1,4 @@
-	<img ng-src={{story.cover}} class='col-md-6'>
+	<img ng-src={{story.cover}} class='storyItem col-md-6' ng-class="{hover: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false">
 	<div class="'col-md-6">
 		<h3>{{story.title}}</h3>
 		<p ng-show="story.author">Author: {{story.author}}</p>
