working on level editor

--- a/browser/js/common/directives/tools/logic-tools.html
+++ b/browser/js/common/directives/tools/logic-tools.html
@@ -13,7 +13,7 @@
   			
   			<input ng-if="logictool.action ==='forLoop'" type="Number" ng-model="logictool.number" class="inline form-control"/>
 
-        <p ng-if="logictool.action ==='forLoop'"> Time(s)</p>
+        <p class='inline' ng-if="logictool.action ==='forLoop'"> Time(s)</p>
 
   		</div>
   	</div>
