starting to write story, cleaned pagejs a bit, added conditional facotry

--- a/browser/js/level-editor/level-editor.html
+++ b/browser/js/level-editor/level-editor.html
@@ -49,7 +49,7 @@
 			        <span class="sr-only">Split button!</span>
 			      </button>
 			      <ul class="uib-dropdown-menu" role="menu" aria-labelledby="split-button">
-			        <li role="menuitem"ng-repeat='tool in toolsPoss track by $index' ng-click='addConcept(tool, $index, spellTools, toolsPoss, "tool")'>{{tool}}</li>
+			        <li role="menuitem"ng-repeat='tool in toolsPoss track by $index' ng-click='addConcept(tool, $index, spellTools, toolsPoss, "tools")'>{{tool}}</li>
 			      </ul>
 			</div>
 			{{spellTools}}
