made about page

--- a/browser/js/about/about.html
+++ b/browser/js/about/about.html
@@ -1,11 +1,17 @@
 <section id="about">
-    <p>
-        This website--the very one at which you currently gaze--was created by a basic scaffolding
-        concocted at Fullstack Academy. Here are some of the people who make it all very real:
-    </p>
-    <carousel interval="2000">
-        <slide ng-repeat="image in images">
-            <img height="300" ng-src="{{ image }}" />
-        </slide>
-    </carousel>
+	<div class="col-md-6 col-sm-12">
+		<h2>Codiblocks</h2>
+	    <p>
+	        Codiblocks is an interactive story book that teaches children basic programmatic logic, using fun story-lines and a unique drag-and-drop interface.
+	    </p>
+
+	    <p>
+	    	This project was created by the Enigmasters of Fullstack Academy: Austin Shoecraft, Beckylee Dell, Chandra Galbiati, and Emily Sanford. We'd like to give special credit to Griffin and Ben for all their support, assistance, and puns.
+	    </p>
+
+	</div>
+    <div class="col-md-6 col-sm-12">
+		<img src="images/go_team.jpg"/>
+	</div>
+
 </section>
