normalized colors, formatted stories and users

--- a/browser/js/common/directives/admin-users/admin-users.html
+++ b/browser/js/common/directives/admin-users/admin-users.html
@@ -1,5 +1,8 @@
-<div>
+<div class="panel">
+	<div class="panel-heading">
 	<h4>{{user.username}}</h4>
+	</div>
+	<div class="panel-body">
 	<p>{{user.email}}</p>
 	<p>
 		<b>Average rating: </b> {{user.averageScore}}%
@@ -45,4 +48,6 @@
 
 
 	</div>
+
+</div>
 </div>
