--- a/browser/js/common/directives/admin-stats/admin-stats.html
+++ b/browser/js/common/directives/admin-stats/admin-stats.html
@@ -25,18 +25,14 @@
 			</div>
 
 			<div class="col-sm-6 col-xs-12 text-center">
-				<p class="text-center">Gender of users</p>
+				<p class="text-center"><b>Gender of users</b></p>
 				<div class="center-block text-center" id="genderChart"></div>
 			</div>
 			
-		<!--TODO:
-			-Pie chart of genders
-			-Distribution of age (bar/histogram)
-		-->
 
 			<div class="col-xs-12 text-center center-block">
 				<div id="ageChart"></div>
-				<p>Age of users</p>
+				<p><b>Age of users</b></p>
 				 <span class="small" ng-if="ageDist.undefined">* {{ageDist.undefined}} users chose not to say</span>
 			</div>
 			
@@ -53,7 +49,7 @@
 			<div class="center-block" style="width:75%" ng-repeat="(key, val) in averageMastery">
 				{{key}}:
 				<div class="progress">
-					<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{val[0]}}" aria-valuemin="0" aria-valuemax="{{val[1]}}" style="width: {{findPercentage(val[0], val[1])}}">
+					<div class="progress-bar progress-bar-default progress-bar-striped active" role="progressbar" aria-valuenow="{{val[0]}}" aria-valuemin="0" aria-valuemax="{{val[1]}}" style="width: {{findPercentage(val[0], val[1])}}">
 						{{findPercentage(val[0], val[1])}}  
 					</div>
 				  
