--- a/browser/js/common/directives/admin-stories/admin-stories.html
+++ b/browser/js/common/directives/admin-stories/admin-stories.html
@@ -1,8 +1,11 @@
-<div>
+<div class="panel">
 	<!--TODO: links go to right url, but not right view-->
-	<h3><a ui-sref="story.indivStory({storyId: story._id})">{{story.title}}</a></h3>
-	<p><b>Author: </b> {{story.author}} </p>
-	<p><b>Difficulty: </b> {{story.difficulty}}</p>
-	<p><b>Concepts: </b> {{story.concepts.join(', ')}}</p>
-
+	<div class="panel-heading">
+		<h3><a ui-sref="story.indivStory({storyId: story._id})">{{story.title}}</a></h3>
+	</div>
+	<div class="panel-body">
+		<p><b>Author: </b> {{story.author}} </p>
+		<p><b>Difficulty: </b> {{story.difficulty}}</p>
+		<p><b>Concepts: </b> {{story.concepts.join(', ')}}</p>
+	</div>
 </div>
