homepage, removed some unnecessary factories, resolved access issues

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,4 +1,4 @@
 <section id="home">
     <fullstack-logo></fullstack-logo>
-    <rando-greeting></rando-greeting>
+    <h1>Welcome to Codiblocks!</h1>
 </section>
