--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -3,11 +3,11 @@
 	<div class="panel-heading">
 		<h3>My spell</h3>
 		<hr />
+		<p>Drop actions below</p>
 	</div>
 	<div class="panel-body components">
 		<ul ui-sortable='toolConfig' ui-sortable="spellConfig"  ng-model="spellComponents" class="spellComponents spellBox">
-			<p>Drop actions here</p>
-		  <li ng-repeat="tool in spellComponents track by $index" class='{{tool.action}}'>
+ 		  <li ng-repeat="tool in spellComponents track by $index" class='{{tool.action}}'>
 		  	<action-tools ng-if="tool.action === 'pickUp' || tool.action==='tell' || tool.action==='give' || tool.action==='ask'" actiontool="tool" model="dirStuff" index="$index" parent="spellComponents" remove="removeFromSpell"></action-tools>
 		  	<move-tool ng-if="tool.action==='move'" movetool="tool" model="dirStuff" index="$index" parent="spellComponents" remove="removeFromSpell"></move-tool>
 		  	<logic-tools ng-if="tool.action === 'ifStatement' || tool.action === 'whileLoop' || tool.action==='forLoop'" logictool="tool" model="dirStuff" index="$index" parent="spellComponents" remove="removeFromSpell"></logic-tools>
