--- a/browser/js/common/directives/tool-box/tool-box.html
+++ b/browser/js/common/directives/tool-box/tool-box.html
@@ -24,7 +24,7 @@
             <b>Variables</b>
             <ul ng-model="spellVars" ui-sortable="dirConfig" class="spellVars first">
                 <li ng-repeat="tool in spellVars track by $index" class="variable" draggable="true"><span
-                        class="">{{ tool.text}}</span></li>
+                        class="">{{ tool.text.replace(re, ' ')}}</span></li>
             </ul>
         </div>
     </div>
