--- a/browser/js/common/directives/tool-box/tool-box.html
+++ b/browser/js/common/directives/tool-box/tool-box.html
@@ -1,6 +1,8 @@
 <div class="panel">
     <div class="panel-heading">
-        <h3>My Tools</h3>
+        <div class="clearfix">
+            <h3 class="btnpadding">My Tools</h3>
+        </div>
         <hr />
 
     </div>
