--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -12,9 +12,8 @@
 			</h3>
 		</div>
 		<hr />
-		<p>Drop actions below</p>
 	</div>
-	<div class="panel-body components">
+	<div class="panel-body components dropspell">
 		<ul ui-sortable='toolConfig' ui-sortable="spellConfig"  ng-model="spellComponents" class="spellComponents spellBox">
  		  <li ng-repeat="tool in spellComponents track by $index" class='{{tool.action}}'>
 		  	<action-tools ng-if="tool.action === 'pickUp' || tool.action==='tell' || tool.action==='give' || tool.action==='ask'" actiontool="tool" model="dirStuff" index="$index" parent="spellComponents" remove="removeFromSpell"></action-tools>
