next page is now next to clear, run, and step

--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -2,13 +2,13 @@
 	
 	<div class="panel-heading">
 		<div class="clearfix">
-			<h3 class="inline col-sm-5 col-xs-12 btnpadding">My spell</h3>
+			<h3 class="inline col-sm-3 col-xs-12 btnpadding">My spell</h3>
 
-			<h3 class="text-center center-block col-sm-7 col-xs-12">
-				<button class="btn inline" ng-click="resetLevel()">Clear</button>
-				<button class="btn inline" ng-click="runSpell(spellComponents)">Run</button>
-				<button class="btn inline" ng-click='stepThrough(spellComponents)'>Step</button>
-
+			<h3>
+				<button class="btn inline col-sm-3  btn-space" ng-click="resetLevel()">Clear</button>
+				<button class="btn inline col-sm-3 btn-space" ng-click="runSpell(spellComponents)">Run</button>
+				<button class="btn inline col-sm-3 btn-space" ng-click='stepThrough(spellComponents)'>Step</button>
+				<button ng-show="solved || user.isAdmin && nextPage" class="btn col-sm-3 btn-space" ng-click="turnPage()">Next Page</button>
 			</h3>
 		</div>
 		<hr />
