changed the name to SpellBook, added landing page image

--- a/browser/js/about/about.html
+++ b/browser/js/about/about.html
@@ -1,8 +1,8 @@
 <section id="about">
 	<div class="col-md-6 col-sm-12">
-		<h2>Codiblocks</h2>
+		<h2>SpellBook</h2>
 	    <p>
-	        Codiblocks is an interactive story book that teaches children basic programmatic logic, using fun story-lines and a unique drag-and-drop interface.
+	        SpellBook is an interactive story book that teaches children basic programmatic logic, using fun story-lines and a unique drag-and-drop interface.
 	    </p>
 
 	    <p>
