--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,4 +1,6 @@
 <section id="home">
-    <fullstack-logo></fullstack-logo>
-    <h1>Welcome to Codiblocks!</h1>
+	<div id="book" class="center-block text-center">
+	    <fullstack-logo class="center-block text-center"></fullstack-logo>
+	    <h1 class="center-block text-center">SpellBook</h1>
+	</div>
 </section>
