--- a/browser/js/common/directives/story-list-item/story-list-item.html
+++ b/browser/js/common/directives/story-list-item/story-list-item.html
@@ -3,7 +3,7 @@
 	</div>
 	<div class="'col-md-6">
 		<h3>{{story.title}}</h3>
-		<p ng-show="story.author"><b>Author:</b> {{story.author}}</p>
+		<p ng-show="story.author"><b>Author:</b> {{story.author.username}}</p>
 		<p><b>Concepts:</b> {{story.concepts.join(", ")}}</p>
 		<p>{{story.description | limitTo: 100}}<span ng-if="story.description.length > 100">...</span></p>
 	</div>
