--- a/browser/js/make-story/make-story.html
+++ b/browser/js/make-story/make-story.html
@@ -19,7 +19,7 @@
 
       <div class="control-group">
         <label for="title" class="control-label">
-          Story Title
+          Story Title<span class="required">*</span>
         </label>
         <div class="controls">
           <input ng-model="title" name="title" type="text" value="" id="title">
@@ -28,7 +28,7 @@
 
       <div class="control-group">
         <label for="description" class="control-label">
-          Story Description
+          Story Description<span class="required">*</span>
         </label>
         <div class="controls">
           <input ng-model="description" name="description" type="text" value="" id="description">
