--- a/browser/js/user/user.html
+++ b/browser/js/user/user.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12">
+<div class="col-md-8 col-xs-12">
 	<div class="panel">
 		<div class="center-block avatar panel-body">
 			<div class='clearfix col-sm-6'>
@@ -19,9 +19,12 @@
 			</div>
 
 			<div class="col-sm-6">
+				<div class="panel-heading">
 				<span class="glyphicon glyphicon-pencil" aria-hidden="true" ng-hide="editing" ng-click="toggleEditing()"></span>
 				<span class="glyphicon glyphicon-floppy-disk" aria-hidden="true" ng-show="editing" ng-click='saveProfile(); toggleEditing()'></span>
+				
 				<h3 style="display:inline-block">About me!</h3>
+				</div>
 				<!--TODO: reset password button-->
 
 				<div ng-hide="editing">
@@ -67,10 +70,7 @@
 		</div>
 		<div class="panel-body">
 			<!-- list of pages - links with sref -->
-			<div ng-repeat='page in user.unfinishedPages' class="col-xs-6 col-md-4"> 
-				<story-list-item story='page.story' ></story-list-item>
-				<button class='btn btn-success' ui-sref='page({id: page._id})'>Go</button>
-			</div>
+			<story-list-item ng-repeat='page in user.unfinishedPages' class="col-xs-6" story='page.story' ui-sref='page({id: page._id})' ></story-list-item>
 		</div>
 
 		<div class="panel-heading">
@@ -78,16 +78,16 @@
 		</div>
 		<div class="panel-body">
 			<!-- list of stories - links with sref -->
-			<div ng-repeat='story in user.completedStories' class="col-xs-6 col-md-4"> 
-				<story-list-item story='story'></story-list-item>
-				<button class='btn btn-success' ng-click='story.goToPage(1)'>Go</button>
-			</div>
-
+			<story-list-item ng-repeat='story in user.completedStories' class="col-xs-6" story='story' ng-click="goToStoryPage($event,story)"></story-list-item >
+				
 		</div>
 	</div>
 	<!-- statistics - should be right or thrid -->
-	<div class="col-xs-12 mastery panel">
-		<div class="panel-heading">
+
+	
+</div>
+	<div class="col-md-4 col-xs-12 mastery panel">
+		<div class="panel-heading text-center">
 			<h3>My Skills</h3>
 		</div>
 
@@ -96,5 +96,3 @@
 			<div id="mastery" class="text-center center-block"></div>
 		</div>
 	</div>
-	
-</div>
