fixing bugs in level edit

--- a/browser/js/common/directives/level-editor-stuff/new-sprite-form.html
+++ b/browser/js/common/directives/level-editor-stuff/new-sprite-form.html
@@ -4,10 +4,11 @@
 		<uib-carousel no-wrap="false" class='col-xs-5'>
 	      <uib-slide ng-repeat="sprite in possSprites">
 	        <img ng-src="{{sprite.img}}" style="margin:auto;" class="sprite-thumbnail">
+	        <button ng-click='selectImg(sprite)' class="btn btn-default">Select this character</button>
 	      </uib-slide>
 	    </uib-carousel>
 	    </div>
-	    <div class='inline'>
+	    <div ng-show='newSprite.name' class='inline'>
 	    	<md-select class='sprite-props select-var-type inline' placeholder="Select type" ng-model="newSprite.type">
 	     		<md-option ng-repeat='type in ["Collectable", "Obstacle", "Person"]' value='{{type}}'>{{type}}</md-option>
 	 		</md-select>
