--- a/browser/js/common/directives/level-editor-stuff/sprite-thumbnail.html
+++ b/browser/js/common/directives/level-editor-stuff/sprite-thumbnail.html
@@ -1,5 +1,5 @@
 <div class="inline col-xs-3 col md-2">
 	<img ng-src="{{sprite.img}}">
 	<p>{{sprite.varName}}, {{sprite.type}} </p>
-	<p>position: ({{sprite.position.x}},{{sprite.position.y}})</p> 
+	<p>position: ({{newSpritePos.x}},{{newSpritePos.y}})</p> 
 </div>
