shelf disappears when you click the book

--- a/browser/js/common/directives/story-list-item/story-list-item.html
+++ b/browser/js/common/directives/story-list-item/story-list-item.html
@@ -3,7 +3,7 @@
 	<img ng-src={{story.cover}} class='cover-image' />
 
 </div>
-<div class="col-md-6">
+<div class="col-md-6 story-info">
 	<h3>{{story.title}}</h3>
 	<p ng-show="story.author"><b>Author:</b> {{story.author.username}}</p>
 	<p><b>Concepts:</b> {{story.concepts.join(", ")}}</p>
